<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#1C1C1E"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#0A84FF"
        android:text="@string/division"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#0A84FF"
        android:text="@string/suma"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#0A84FF"
        android:text="@string/multiply"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRest"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#0A84FF"
        android:text="@string/rest"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/button8"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_8"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_0"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/c"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/result"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <Button
        android:id="@+id/button7"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_7"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_9"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_6"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_4"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_3"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <EditText
        android:id="@+id/resultado"
        android:layout_width="393dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:paddingEnd="8dp"
        android:text="@string/_0"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/button1"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        android:textColor="#fff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_2"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/button5"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="#2C2C2E"
        android:text="@string/_5"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

</androidx.constraintlayout.widget.ConstraintLayout>